Release 1.0.3f0:

OJSNLCPP-7: Changed default iOS SDK to latest

Release 1.0.2f0:

OJSNLCPP-6: Fixed framework/include dir and libjson.a not copied into prefix dir

Release 1.0.1f0:

OJSNLCPP-5: Added project licence

Release 1.0.0f0:

OJSNLCPP-3: Changed default build lib and framework location to ./prefix

OJSNLCPP-2: Ignored directories generated at build time

OJSNLCPP-1: Build libjson.framework iOS platforms (armv6/armv7/i4386) with libjson 7.6.1 (Successfully tested on SDK 5.1 but should work on SDK 4.3/SDK 5.0).
- iOS paltform:
    - builds static universal xcode framework (for x86/armv6/armv7)
    - builds static universal binary library (for x86/armv6/armv7)
