@@ -1,5 +1,7 @@
 Release 1.0.3f0:
 
+OJSNLCPP-8: Incorrect path to Clang compiler when using Xcode 4.5+
+
 OJSNLCPP-7: Changed default iOS SDK to latest
 
 Release 1.0.2f0:
